# cras_msgs

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rosdoc.yaml
.github/workflows/: ci.yaml  reuse.yaml
include/cras_msgs/: pool_allocated_sensor_msgs.h
msg/: Brightness.msg  BrightnessStamped.msg  ColorRGBAStamped.msg  ElectricCurrent.msg  ElectricCurrentMeasurement.msg  ElectricCurrentStamped.msg  Heartbeat.msg  Power.msg  PowerStamped.msg  PowerSwitchState.msg  PowerSwitchStateStamped.msg  Voltage.msg  VoltageStamped.msg
msg_ros1/: PowerMeasurement.msg  VoltageMeasurement.msg
msg_ros2/msg/: ElectricCurrentMeasurement.msg  PowerMeasurement.msg  VoltageMeasurement.msg
srv/: SetBrightness.srv  SetColor.srv
test/: test_pool_allocated.cpp
