<?xml version="1.0"?>
<package format="3">
  <name>cras_msgs</name>
  <version>1.0.1</version>
  <description>Common messages used by CRAS</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/cras_msgs</url>
  <url type="bugtracker">https://github.com/ctu-vras/cras_msgs/issues</url>
  <url type="repository">https://github.com/ctu-vras/cras_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>std_msgs</depend>

  <test_depend>libboost-dev</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>sensor_msgs</test_depend>

  <doc_depend>rosdoc_lite</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
