<?xml version="1.0"?>
<package format="3">
  <name>cras_msgs</name>
  <version>1.1.1</version>
  <description>Common messages used by CRAS</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/cras_msgs</url>
  <url type="bugtracker">https://github.com/ctu-vras/cras_msgs/issues</url>
  <url type="repository">https://github.com/ctu-vras/cras_msgs</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_export_depend condition="$ROS_VERSION == 1">message_runtime</build_export_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
  
  <depend>std_msgs</depend>

  <test_depend condition="$ROS_VERSION == 1">libboost-dev</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2 and $ROS_VERSION == 1">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3 and $ROS_VERSION == 1">python3-catkin-lint</test_depend>
  <test_depend condition="$ROS_VERSION == 1">roslint</test_depend>
  <test_depend condition="$ROS_VERSION == 1">sensor_msgs</test_depend>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <doc_depend>rosdoc_lite</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
